[package]
name = "toast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "*"
once_cell = "1.10.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
bytes = { version = "1", features = ["serde"] }